# RepoFellow

./: .env.example  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.py  codebase.py  docker-compose.yml  github_ai_assistant.py  langgraph.json  main.py  pyproject.toml  repo_fellow.py  requirements.txt  setup.py
.github/: FUNDING.yml
agent/: .env.example  langgraph.json
agent/src/agents/: business.py  registry.py  router.py
agent/src/graph/: __init__.py  builder.py
agent/src/handlers/: repository.py
agent/src/models/: state.py
agent/src/tools/: visualization.py
agent/src/utils/: jira_client.py
backend/: pyproject.toml  requirements.txt
backend/src/utils/: image_analysis.py
src/agents/: base.py  business.py  code.py  documentation.py  registry.py  router.py
src/graph/: builder.py
src/handlers/: business_analysis.py  error.py  query.py  repository.py  router.py  validation.py
src/models/: state.py
src/repo_fellow/: __init__.py  __main__.py  cli.py
src/repofellow/: __init__.py  __main__.py
src/repofellow/agents/: __init__.py  base.py  business.py  cli_router.py  code.py  registry.py
src/repofellow/cli/: __init__.py  app.py
src/repofellow/cli/commands/: __init__.py  analyze.py  ask.py  modify.py  quality.py
src/repofellow/config/: agent_config.py  cli_mappings.py  config_manager.py  prompts.py
src/repofellow/core/: codebase.py  orchestrator.py
src/repofellow/handlers/: query.py
src/repofellow/models/: schema.py
src/repofellow/tools/: __init__.py  business_analysis.py
src/repofellow/utils/: __init__.py  config.py  model_factory.py
src/tools/: analysis.py  visualization.py
src/utils/: config.py  helpers.py
