[project]
name = "repofellow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jira>=3.8.0",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.61",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langgraph-cli>=0.1.65",
    "langgraph-sdk>=0.1.48",
    "langsmith>=0.2.10",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "notebook>=7.3.2",
    "pygithub>=2.5.0",
    "tavily-python>=0.5.0",
    "trustcall>=0.0.26",
    "wikipedia>=1.4.0",
]
